# mind-expander

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  RELEASING.md  SECURITY.md  build.rs
.claude/hooks/: allow-all.py  pre-tool-use.py
.github/workflows/: ci.yml  release.yml
assets/: codex_type_walkthrough.mov  overiew.mov
docs/: ai-development-guide.md  demo-videos.md  layout.md  tour-authoring.md
examples/: silverfir-instance-tour.json
npm/binary-darwin-arm64/: package.json
npm/binary-darwin-x64/: package.json
npm/binary-linux-arm64-gnu/: package.json
npm/binary-linux-x64-gnu/: package.json
npm/binary-win32-x64-msvc/: .gitignore  package.json
npm/mind-expander/: .gitignore  README.md  package.json
scripts/: release.sh  test-stream.sh
skill/: mind-expander.md
src/: architecture.rs  callgraph.rs  diff.rs  extract.rs  frontend.rs  git_view.rs  install_skill.rs  main.rs  model.rs  ownership.rs  print.rs  resolve.rs  server.rs  survey.rs  tour.rs  tour_client.rs  unified.rs  unified_facts.rs
src/frontend/: rust.rs  typescript.rs
src/frontend/typescript/: calls.rs
tests/: live_reload.rs  typescript_extract.rs
tests/fixtures/typescript/: package.json  tsconfig.json
viewer/: biome.json  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
viewer/e2e/: _harness.ts  arrow-routing.spec.ts  call-graph-arrows.spec.ts  call-pickers.spec.ts  chrome-affordances.spec.ts  code-panel-diff-del.spec.ts  code-panel-modes.spec.ts  code-panel-split.spec.ts  code-panel.spec.ts  diff-unified-mode.spec.ts  dispatch-kinds.spec.ts  focus-mode.spec.ts  geometry.spec.ts  ghost-reexport.spec.ts  keyboard-shortcuts.spec.ts  layout-placement.spec.ts  minimap.spec.ts  module-tree.spec.ts  ownership-arrow-disambig.spec.ts  selection-focus.spec.ts  selection-interactions.spec.ts  tour.spec.ts  type-box.spec.ts  typebox-interactions.spec.ts  zoom-pan-viewport.spec.ts
viewer/e2e/calls-fixture/: Cargo.toml
viewer/e2e/code-panel-fixture/: Cargo.toml
viewer/e2e/dense-fixture/: Cargo.toml
viewer/e2e/dispatch-kinds-fixture/: Cargo.toml
viewer/e2e/fixture-workspace/: Cargo.toml
viewer/e2e/focus-fixture/: Cargo.toml
viewer/e2e/ghost-fixture/: Cargo.toml
viewer/e2e/layout-placement-fixture/: Cargo.toml
viewer/e2e/minimap-fixture/: Cargo.toml
viewer/e2e/module-tree-ts-fixture/: package.json  tsconfig.json
viewer/e2e/selection-fixture/: Cargo.toml
viewer/e2e/selection-interactions-fixture/: Cargo.toml
viewer/e2e/type-box-fixture/: Cargo.toml
viewer/e2e/typebox-interactions-fixture/: Cargo.toml
viewer/src/: main.ts
viewer/src/analysis/: arrow_hit.ts  borrow_flavor.ts  calls.ts  drift.ts  layout.ts  layout_bak.ts  layout_channels_bak.ts  layout_metrics.ts  layout_model.ts  layout_rank_bak.ts  module_tree.ts  ownership.ts  visibility.ts
viewer/src/data/: canonicalize.ts  file_tree.ts  ids.ts  load.ts  schema.ts  spans.ts  tour_schema.ts
viewer/src/layout/: band_layout.ts  band_shape.ts  box_fragments.ts  debug.ts  geometry.ts  grid_placement.ts  obstacles.ts  pipeline.ts  placement_gaps.ts  routing.ts  routing_channels.ts  routing_class.ts  routing_common.ts  routing_dogleg.ts  routing_field.ts  routing_grid.ts  types.ts
viewer/src/layout2/: band_shape.ts  debug.ts  geometry.ts  grid.ts  grid_placement.ts  pipeline.ts  placement_plan.ts  routing.ts  types.ts  (+2 more)
viewer/tests/: anchor.test.ts  arrow_disambig.test.ts  arrow_hit.test.ts  arrow_invariants.test.ts  arrow_navigation.test.ts  band_layout.test.ts  band_shape.test.ts  borrow_flavor.test.ts  box_fragments.test.ts  calls.test.ts  canonicalize.test.ts  code_panel_focus_frame.test.ts  debug.test.ts  debug_grid_overlay.test.ts  direct_arrows.test.ts  drift.test.ts  facts_update_preserve.test.ts  golden_layout.test.ts  grid_placement.test.ts  html_tree.test.ts  layout.test.ts  layout2.test.ts  layout2_dag_real.test.ts  layout2_grid.test.ts  layout_dag_real.test.ts  layout_grid.test.ts  layout_lookup.test.ts  layout_metrics.test.ts  member_color.test.ts  module_tree.test.ts  obstacles.test.ts  ownership.test.ts  placement_plan.test.ts  polyline_path.test.ts  render_binding.test.ts  routing.test.ts  routing_channels.test.ts  routing_pressure.test.ts  selection_style.test.ts  spans_side.test.ts  (+2 more)
(+137 files in other folders)
