[package]
name = "mind-expander"
version = "0.1.0"
edition = "2021"
authors = ["Bill Ming <mbbill@gmail.com>"]
description = "Codebase fact extractor for Silverfir-nano (per-type ownership facts + cross-type edge graph)"
license = "MIT/Apache-2.0"

[[bin]]
name = "mind-expander"
path = "src/main.rs"

[dependencies]
syn = { version = "2", features = ["full", "parsing", "extra-traits", "visit"] }
walkdir = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
proc-macro2 = "1"
quote = "1"
anyhow = "1"
