[package]
name = "mind-expander"
version = "0.1.0"
edition = "2021"
authors = ["Bill Ming <mbbill@gmail.com>"]
description = "Codebase fact extractor for Silverfir-nano (per-type ownership facts + cross-type edge graph)"
license = "MIT/Apache-2.0"

[[bin]]
name = "mind-expander"
path = "src/main.rs"

[dependencies]
syn = { version = "2", features = ["full", "parsing", "extra-traits", "visit"] }
walkdir = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
proc-macro2 = { version = "1", features = ["span-locations"] }
quote = "1"
anyhow = "1"
# Local preview/dev server used by the `view` subcommand. Serves the
# embedded viewer bundle plus `/api/facts` and `/api/source` over HTTP.
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal"] }
axum = "0.7"
tower-http = { version = "0.5", features = ["fs"] }
include_dir = "0.7"
opener = "0.7"
# Tiny sync HTTP client for the `tour` subcommand. Stays under the
# tokio/axum stack so we don't pull a second async runtime just to
# POST a JSON.
ureq = { version = "2", default-features = false, features = ["json"] }
# Adapter from broadcast::Receiver to a Stream for axum SSE.
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"
