[package]
name = "mind-expander"
version = "0.1.7"
edition = "2021"
authors = ["Bill Ming <mbbill@gmail.com>"]
description = "An infinite-canvas workspace for coding with AI agents."
license = "Apache-2.0"
repository = "https://github.com/mbbill/mind-expander"
homepage = "https://github.com/mbbill/mind-expander"
readme = "README.md"
keywords = ["ai", "codebase", "visualization", "code-review", "diagram"]
categories = ["development-tools", "visualization", "command-line-utilities"]

[[bin]]
name = "mind-expander"
path = "src/main.rs"

[dependencies]
syn = { version = "2", features = ["full", "parsing", "extra-traits", "visit"] }
walkdir = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
proc-macro2 = { version = "1", features = ["span-locations"] }
quote = "1"
anyhow = "1"
# TypeScript frontend. swc_* crates are vendored individually
# because swc_core's umbrella crate has unstable re-exports across
# releases. Versions pinned to the latest stable swc as of writing.
swc_common = "21"
swc_ecma_ast = "23"
swc_ecma_parser = { version = "39", features = ["typescript"] }
swc_ecma_visit = "23"
# Local preview/dev server used by the `view` subcommand. Serves the
# embedded viewer bundle plus `/api/facts` and `/api/source` over HTTP.
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal"] }
axum = "0.7"
tower-http = { version = "0.5", features = ["fs"] }
include_dir = "0.7"
# opener removed — agents open the browser themselves (see --help)
# Tiny sync HTTP client for the `tour` subcommand. Stays under the
# tokio/axum stack so we don't pull a second async runtime just to
# POST a JSON.
ureq = { version = "2", default-features = false, features = ["json"] }
# Adapter from broadcast::Receiver to a Stream for axum SSE.
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"
# Cross-platform user-cache resolution for the instance-record file
# at `~/.cache/mind-expander/run/<pid>.json`.
dirs = "5"
# Note: self-daemonize was dropped — `view` stays in the foreground
# and the agent backgrounds it via Monitor (Claude Code) or PTY-poll
# (Codex). Removing `daemonize` also drops a Unix-only dep, so the
# crate now builds cleanly for Windows without a separate code path.
